force-app/main/default/objects/Violation_Accounting_Code__c/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Code</label>
    <type>Text</type>
</CustomField>