force-app/main/default/objects/Violation_Accounting_Code__c/fields/Added_Manually__c.field-meta.xml
<CustomField>
    <fullName>Added_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when a Cal Atlas user manually adds a Violation Accounting Code to a Case Issue. These have to be reported to DIR Accounting separately to ensure they are recorded in CalSTARS.</description>
    <inlineHelpText>Check this box when you manually add a Violation Accounting Code to a Case Issue, so that it can be reported to DIR Accounting separately to ensure they are recorded in CalSTARS.</inlineHelpText>
    <label>Added Manually</label>
    <type>Checkbox</type>
</CustomField>