force-app/main/default/objects/Violation_Accounting_Code__c/fields/Agency_Use__c.field-meta.xml
<CustomField>
    <fullName>Agency_Use__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Agency_Use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Use</label>
    <type>Text</type>
</CustomField>