force-app/main/default/objects/Violation_Accounting_Code__c/fields/ALTACCT__c.field-meta.xml
<CustomField>
    <fullName>ALTACCT__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Alt_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALTACCT</label>
    <type>Text</type>
</CustomField>