force-app/main/default/objects/Violation_Accounting_Code__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <description>Calculates the amount that applies to the specific accounting code</description>
    <formula>IF ( ISPICKVAL ( Applicable_Accounting_Code__r.Accounting_Code__r.Payment_Type__c , &#39;Penalty&#39; ),  Case_Violation__r.Citation_Amount__c *  Applicable_Accounting_Code__r.Split_Percentage__c ,  Case_Violation__r.Total_Interest_Amount__c * Applicable_Accounting_Code__r.Split_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on any split percentage on the accounting code, this defines that amount that applies from the violation</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>