force-app/main/default/objects/Violation_Accounting_Code__c/fields/Applied_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Applied_Balance_Due__c</fullName>
    <description>Calculates the balance due that applies to the specific accounting code</description>
    <formula>IF ( ISPICKVAL ( Applicable_Accounting_Code__r.Accounting_Code__r.Payment_Type__c , &#39;Penalty&#39; ),  Case_Violation__r.Penalty_Balance_Due__c * Applicable_Accounting_Code__r.Split_Percentage__c , Case_Violation__r.Interest_Balance_Due__c * Applicable_Accounting_Code__r.Split_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the balance due that applies to the specific accounting code</inlineHelpText>
    <label>Applied Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>