force-app/main/default/objects/Violation_Accounting_Code__c/fields/Case_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation__c</fullName>
    <description>Master case violation for the code that applies</description>
    <label>Case Violation</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipLabel>Violation Accounting Codes</relationshipLabel>
    <relationshipName>Violation_Accounting_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>