force-app/main/default/objects/Violation_Accounting_Code__c/fields/CHARTFIELD1__c.field-meta.xml
<CustomField>
    <fullName>CHARTFIELD1__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Agency_Use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHARTFIELD1</label>
    <type>Text</type>
</CustomField>