force-app/main/default/objects/Violation_Accounting_Code__c/fields/DEPTID__c.field-meta.xml
<CustomField>
    <fullName>DEPTID__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Reporting_Structure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPTID</label>
    <type>Text</type>
</CustomField>