force-app/main/default/objects/Violation_Accounting_Code__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>Case_Violation__r.Fiscal_Year__c</formula>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>