force-app/main/default/objects/Violation_Accounting_Code__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <formula>Applicable_Accounting_Code__r.Accounting_Code__r.Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Code</label>
    <type>Text</type>
</CustomField>