force-app/main/default/objects/Violation_Accounting_Code__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>IF(VALUE( Fiscal_Year__c )&lt;(2018),(&#39;BOF-&#39;&amp;substitute(Current_Doc__c,&quot;-&quot;,&quot;&quot;)&amp;&quot;-&quot;&amp;right(Fiscal_Year__c,2)),(&#39;BOF-&#39;&amp;Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item</label>
    <type>Text</type>
</CustomField>