force-app/main/default/objects/Violation_Accounting_Code__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <formula>TEXT( Applicable_Accounting_Code__r.Accounting_Code__r.Program__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>